# kodebrain

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/design/: agents.md  open-decisions.md  skills.md  taxonomy.md  workflows.md
kodebrain/: cli.py  hook.py  install.py
kodebrain/skill/: SKILL.md
kodebrain/skill/scripts/: harvest.py
obsidian-vault-config/: app.json  graph.json
schema/: edge.schema.json  knowledge-base.schema.json  node.schema.json
scripts/: harvest.py
templates/: capability.md  concept.md  decision.md  domain.md  flow.md  model.md  risk.md
